--- a/app/index.css
+++ b/app/index.css
@@ -7,6 +7,25 @@ html, body {
     font-family: sans-serif;
 }
 
+
+#intro-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+#intro-container button {
+    cursor : pointer;
+    display: none;
+}
+
+
+
 #option-container {
     position: absolute;
     top: 0;
@@ -17,6 +36,8 @@ html, body {
     align-items: center;
     color: white;
     padding: 10px;
+
+    border-bottom-right-radius: 10px;
 }
 
 #option-container > div {
@@ -48,8 +69,6 @@ html, body {
 }
 
 
-
-
 input[type=range] {
     -webkit-appearance: none;
     width: 100%;
@@ -62,14 +81,14 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 5px;
     cursor: pointer;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
     background: #ffffff;
-    border-radius: 1px;
+    border-radius: 25px;
     border: 0px solid rgba(255, 255, 255, 0);
 }
 input[type=range]::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-    border: 0px solid rgba(0, 0, 0, 0);
+    border: 0px solid rgba(255, 255, 255, 0);
     height: 15px;
     width: 15px;
     border-radius: 15px;
@@ -79,20 +98,20 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: -5px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #NaNNaNNaN;
+    background: #ffffff;
 }
 input[type=range]::-moz-range-track {
     width: 100%;
     height: 5px;
     cursor: pointer;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
     background: #ffffff;
-    border-radius: 1px;
+    border-radius: 25px;
     border: 0px solid rgba(255, 255, 255, 0);
 }
 input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-    border: 0px solid rgba(0, 0, 0, 0);
+    border: 0px solid rgba(255, 255, 255, 0);
     height: 15px;
     width: 15px;
     border-radius: 15px;
@@ -108,20 +127,20 @@ input[type=range]::-ms-track {
     color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-    background: #NaNNaNNaN;
+    background: #f2f2f2;
     border: 0px solid rgba(255, 255, 255, 0);
-    border-radius: 2px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    border-radius: 50px;
+    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
 }
 input[type=range]::-ms-fill-upper {
     background: #ffffff;
     border: 0px solid rgba(255, 255, 255, 0);
-    border-radius: 2px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    border-radius: 50px;
+    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
 }
 input[type=range]::-ms-thumb {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-    border: 0px solid rgba(0, 0, 0, 0);
+    border: 0px solid rgba(255, 255, 255, 0);
     height: 15px;
     width: 15px;
     border-radius: 15px;
@@ -133,7 +152,5 @@ input[type=range]:focus::-ms-fill-lower {
     background: #ffffff;
 }
 input[type=range]:focus::-ms-fill-upper {
-    background: #NaNNaNNaN;
+    background: #ffffff;
 }
-
-
