--- a/app/index.css
+++ b/app/index.css
@@ -20,9 +20,82 @@ html, body {
 }
 
 #intro-container button {
+    position: absolute;
+    top: 50%;
+    left : 50%;
+    transform: translateY(-50%) translateX(-50%);
+
     cursor : pointer;
     display: none;
+
+    z-index: 10;
 }
+
+#intro-container #intro-circles {
+    position: relative;
+    width: 90vh;
+    height: 90vh;
+}
+
+
+#intro-container div.circle{
+    position: absolute;
+    top: 50%;
+    left : 50%;
+    transform: translateY(-50%) translateX(-50%);
+
+    border-width: 5px;
+    border-style: solid;
+    border-radius: 50%;
+    /*will-change: border-color;*/
+}
+
+
+
+#intro-container div.circle:nth-child(1){
+    /*border-color: red;*/
+    width: 100%;
+    height: 100%;
+}
+
+#intro-container div.circle:nth-child(2){
+    /*border-color: green;*/
+    width: 90%;
+    height: 90%;
+}
+
+#intro-container div.circle:nth-child(3){
+    /*border-color: blue;*/
+    width: 80%;
+    height: 80%;
+}
+
+#intro-container div.circle:nth-child(4){
+    /*border-color: pink;*/
+    width: 70%;
+    height: 70%;
+}
+
+#intro-container div.circle:nth-child(5){
+    /*border-color: yellow;*/
+    width: 60%;
+    height: 60%;
+}
+
+#intro-container div.circle:nth-child(6){
+    /*border-color: yellow;*/
+    width: 50%;
+    height: 50%;
+}
+
+#intro-container div.circle:nth-child(7){
+    /*border-color: yellow;*/
+    width: 40%;
+    height: 40%;
+}
+
+
+
 
 
 
