--- a/app/index.css
+++ b/app/index.css
@@ -149,7 +149,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5px 0;
+    margin: 4px 0;
 
 
 }
@@ -184,19 +184,19 @@ input[type=range]:focus {
 }
 input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 5px;
+    height: 3px;
     cursor: pointer;
-    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
     background: #ffffff;
-    border-radius: 25px;
-    border: 0px solid rgba(255, 255, 255, 0);
+    border-radius: 3px;
+    border: 0px solid rgba(0, 1, 1, 0);
 }
 input[type=range]::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-    border: 0px solid rgba(255, 255, 255, 0);
-    height: 15px;
-    width: 15px;
-    border-radius: 15px;
+    border: 0px solid rgba(0, 0, 0, 0);
+    height: 13px;
+    width: 13px;
+    border-radius: 12px;
     background: #ffffff;
     cursor: pointer;
     -webkit-appearance: none;
@@ -207,25 +207,25 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 input[type=range]::-moz-range-track {
     width: 100%;
-    height: 5px;
+    height: 3px;
     cursor: pointer;
-    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
     background: #ffffff;
-    border-radius: 25px;
-    border: 0px solid rgba(255, 255, 255, 0);
+    border-radius: 3px;
+    border: 0px solid rgba(0, 1, 1, 0);
 }
 input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-    border: 0px solid rgba(255, 255, 255, 0);
-    height: 15px;
-    width: 15px;
-    border-radius: 15px;
+    border: 0px solid rgba(0, 0, 0, 0);
+    height: 13px;
+    width: 13px;
+    border-radius: 12px;
     background: #ffffff;
     cursor: pointer;
 }
 input[type=range]::-ms-track {
     width: 100%;
-    height: 5px;
+    height: 3px;
     cursor: pointer;
     background: transparent;
     border-color: transparent;
@@ -233,25 +233,25 @@ input[type=range]::-ms-track {
 }
 input[type=range]::-ms-fill-lower {
     background: #f2f2f2;
-    border: 0px solid rgba(255, 255, 255, 0);
-    border-radius: 50px;
-    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
+    border: 0px solid rgba(0, 1, 1, 0);
+    border-radius: 6px;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]::-ms-fill-upper {
     background: #ffffff;
-    border: 0px solid rgba(255, 255, 255, 0);
-    border-radius: 50px;
-    box-shadow: 0px 0px 0.1px #ffffff, 0px 0px 0px #ffffff;
+    border: 0px solid rgba(0, 1, 1, 0);
+    border-radius: 6px;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]::-ms-thumb {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-    border: 0px solid rgba(255, 255, 255, 0);
-    height: 15px;
-    width: 15px;
-    border-radius: 15px;
+    border: 0px solid rgba(0, 0, 0, 0);
+    height: 13px;
+    width: 13px;
+    border-radius: 12px;
     background: #ffffff;
     cursor: pointer;
-    height: 5px;
+    height: 3px;
 }
 input[type=range]:focus::-ms-fill-lower {
     background: #ffffff;
